// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generator creates the out put with the correct service name 1`] = `
"// @flow

import * as actions from './actions'
import * as actionTypes from './action-types'
import * as apiClient from './api-client'

const GrpcService = {
  actions,
  actionTypes,
  apiClient
}

module.exports = GrpcService"
`;

exports[`template creates template 1`] = `
"// @flow

import * as actions from './actions'
import * as actionTypes from './action-types'
import * as apiClient from './api-client'

const ServiceName123 = {
  actions,
  actionTypes,
  apiClient
}

module.exports = ServiceName123"
`;
